kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inscriptions-wei
spec:
  selector:
    app: inscriptions-wei
  ports:
  - port: 5005
    targetPort: 5005
